# dxheroes-task

./: .gitignore  README.md  pyproject.toml  test.py
offers_sdk/: __init__.py  auth.py  client.py  config.py  models.py
tests/: test_auth.py  test_offers.py  test_products.py
