[project]
name = "offers-sdk"
version = "0.1.1"
description = "Python SDK for interacting with the Offers API"
authors = [
    {name = "Micholenko",email = "michzavadil@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
pytest-mock = "^3.14.1"

